--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 
     <div class="box">
-        <span class="imgg" style="--i:1;"><img src="1pic.jpg"></span>
-        <span class="imgg" style="--i:2;"><img src="2pic.jpg"></span>
-        <span class="imgg" style="--i:3;"><img src="3pic.jpg"></span>
-        <span class="imgg" style="--i:4;"><img src="4pic.jpg"></span>
-        <span class="imgg" style="--i:5;"><img src="5pic.jpg"></span>
-        <span class="imgg" style="--i:6;"><img src="6pic.jpg"></span>
-        <span class="imgg" style="--i:7;"><img src="7pic.jpg"></span>
-        <span class="imgg" style="--i:8;"><img src="5pic.jpg"></span>
+        <span class="imgg" style="--i:1;"><img src="pics/7pic.jpg"></span>
+        <span class="imgg" style="--i:2;"><img src="pics/2pic.jpg"></span>
+        <span class="imgg" style="--i:3;"><img src="pics/3pic.jpg"></span>
+        <span class="imgg" style="--i:4;"><img src="pics/4pic.jpg"></span>
+        <span class="imgg" style="--i:5;"><img src="pics/5pic.jpg"></span>
+        <span class="imgg" style="--i:6;"><img src="pics/6pic.jpg"></span>
+        <span class="imgg" style="--i:7;"><img src="pics/7pic.jpg"></span>
+        <span class="imgg" style="--i:8;"><img src="pics/5pic.jpg"></span>
     </div>
     <pre style="color: cyan; font-size: 17px;">
             In nature, nothing is perfect
@@ -31,14 +31,14 @@
         </pre>
 
     <div class="box">
-        <span class="imgg" style="--i:1;"><img src="1pic.jpg"></span>
-        <span class="imgg" style="--i:2;"><img src="2pic.jpg"></span>
-        <span class="imgg" style="--i:3;"><img src="3pic.jpg"></span>
-        <span class="imgg" style="--i:4;"><img src="4pic.jpg"></span>
-        <span class="imgg" style="--i:5;"><img src="5pic.jpg"></span>
-        <span class="imgg" style="--i:6;"><img src="6pic.jpg"></span>
-        <span class="imgg" style="--i:7;"><img src="7pic.jpg"></span>
-        <span class="imgg" style="--i:8;"><img src="5pic.jpg"></span>
+        <span class="imgg" style="--i:1;"><img src="pics/1pic.jpg"></span>
+        <span class="imgg" style="--i:2;"><img src="pics/2pic.jpg"></span>
+        <span class="imgg" style="--i:3;"><img src="pics/3pic.jpg"></span>
+        <span class="imgg" style="--i:4;"><img src="pics/4pic.jpg"></span>
+        <span class="imgg" style="--i:5;"><img src="pics/5pic.jpg"></span>
+        <span class="imgg" style="--i:6;"><img src="pics/6pic.jpg"></span>
+        <span class="imgg" style="--i:7;"><img src="pics/7pic.jpg"></span>
+        <span class="imgg" style="--i:8;"><img src="pics/5pic.jpg"></span>
     </div>
 
 
